add auth path for service url
